<resources>
    <string name="app_name">What to watch?</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_top_rated_movies" translatable="false">TopRatedMoviesActivity</string>
    <string name="title_activity_favourite_movies" translatable="false">FavouriteMoviesActivity</string>
    <string name="description_poster_of_movie">Poster of movie</string>
    <string name="top_rated">Top rated</string>
    <string name="most_popular">Most popular</string>
    <string name="description_big_poster">Big poster of movie</string>
    <string name="test_overview" translatable="false">Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</string>
    <string name="release_date">Release date:</string>
    <string name="test_rating" translatable="false">8.5</string>
    <string name="description_star_icon">Star icon with rating of movie</string>
    <string name="title">Title:</string>
    <string name="original_title">Original title:</string>
    <string name="rating">Rating:</string>
    <string name="test_title" translatable="false">Смолфут</string>
    <string name="test_original_title" translatable="false">Smallfoot</string>
    <string name="test_release_date" translatable="false">2018-10-03</string>
    <string name="overview">Overview:</string>
    <string name="test_trailer_title" translatable="false">Trailer 1</string>
    <string name="trailers_label">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="description_icon_launch_trailer">Icon launch trailer</string>
    <string name="description_icon_favourite">Add/remove to/from favourite</string>
    <string name="warning_no_internet_connection">There is no internet connection. Please try again later&#8230;</string>
    <string name="description_reload_page">Reload page</string>
    <string name="slow_internet_connection_warning">Slow internet connection. Please try again later&#8230;</string>
    <string name="title_activity_navigation_menu" translatable="false">NavigationMenuActivity</string>
    <string name="title_activity_detail_movie" translatable="false">DetailMovieActivity</string>
    <string name="my_favourite">My favourite</string>
    <string name="added_to_favourite">Added to favourite movies</string>
    <string name="deleted_from_favourite">Deleted from favourite movies</string>
    <string name="alert_title_delete_from_favourite">Are you sure?</string>
    <string name="alert_message_delete_from_favourite">Do you want to delete this movie from favourite?</string>
    <string name="warning_no_added_movies">You still haven\'t added movies here.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
