<?xml version="1.0" encoding="utf-8"?>
<layout>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        style="@style/LabelStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View style="@style/BorderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@id/textViewOriginalTitle"/>

    <TextView
        android:id="@+id/textViewOriginalTitleLabel"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/original_title"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <View style="@style/BorderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOriginalTitle"
        app:layout_constraintBottom_toTopOf="@id/textViewReleaseDate"/>

    <TextView
        android:id="@+id/textViewReleaseDateLabel"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="@+id/textViewOriginalTitleLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

    <View style="@style/BorderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewReleaseDate"
        app:layout_constraintBottom_toTopOf="@id/textViewVoteAverage"/>

    <TextView
        android:id="@+id/textViewVoteAverageLabel"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="@+id/textViewReleaseDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

    <View style="@style/BorderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewVoteAverage"
        app:layout_constraintBottom_toTopOf="@id/textViewOverviewLabel"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_between_label_and_values"
        android:paddingEnd="@dimen/padding_inside_text_movie_info"
        tools:text="@string/test_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@+id/textViewOriginalTitleLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewTitleLabel" />

    <TextView
        android:id="@+id/textViewOriginalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_between_label_and_values"
        android:paddingEnd="@dimen/padding_inside_text_movie_info"
        tools:text="@string/test_original_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewOriginalTitleLabel" />

    <TextView
        android:id="@+id/textViewReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_between_label_and_values"
        android:paddingEnd="@dimen/padding_inside_text_movie_info"
        tools:text="@string/test_release_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewReleaseDateLabel" />

    <TextView
        android:id="@+id/textViewVoteAverage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_between_label_and_values"
        android:paddingEnd="@dimen/padding_inside_text_movie_info"
        android:text="@string/test_rating"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewVoteAverageLabel" />


    <TextView
        android:id="@+id/textViewOverviewLabel"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        app:layout_constraintStart_toStartOf="@+id/textViewVoteAverageLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewVoteAverageLabel"/>

    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverviewLabel"
        tools:text="@string/test_overview" />

    <View style="@style/BorderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOverview"
        app:layout_constraintBottom_toBottomOf="parent"/>



</android.support.constraint.ConstraintLayout>
</layout>